force-app/main/default/objects/plaunch__PipeLaunch_Planning_Filter__mdt/plaunch__PipeLaunch_Planning_Filter__mdt.object-meta.xml
<CustomObject>
    <description>Customize PipeLaunch Planning Filters:
Define the fields visible</description>
    <label>PipeLaunch Planning Filter</label>
    <pluralLabel>PipeLaunch Planning Filter</pluralLabel>
</CustomObject>