force-app/main/default/objects/plaunch__PipeLaunch_Planning_Filter__mdt/fields/plaunch__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Field_Api_Name__c</fullName>
    <description>API name of the field (eg AnnualRevenue or. MyCountryCode__c)</description>
    <inlineHelpText>Supported field types: Picklist; Currency; Number</inlineHelpText>
    <label>Field Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>