force-app/main/default/objects/plaunch__PipeLaunch_Planning_Filter__mdt/fields/plaunch__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Object_Type__c</fullName>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>