force-app/main/default/objects/plaunch__PipeLaunch_Planning_Filter__mdt/fields/plaunch__Order__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Order on the page layout</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>